--- a/public/mobile.css
+++ b/public/mobile.css
@@ -27,9 +27,10 @@
     }
 
     .main__window-container {
-        width: 100vw;
+        width: 95vw;
         overflow-y: hidden;
         height: 49vh;
+        margin: 0 auto;
     }
 
     .footer__container {
@@ -124,6 +125,10 @@
         color:rgb(142, 230, 255);
         bottom:-37%; 
 
+    }
+
+    .bottom {
+        margin-top: 1vh;
     }
 
 
