--- a/public/mobile.css
+++ b/public/mobile.css
@@ -30,7 +30,7 @@
         width: 100vw;
         overflow-y: hidden;
         height: 49vh;
-        margin: 0 auto;
+        margin: 0
     }
 
     .footer__container {
