--- a/public/mobile.css
+++ b/public/mobile.css
@@ -27,10 +27,10 @@
     }
 
     .main__window-container {
-        width: 100vw;
+        width: 99vw;
         overflow-y: hidden;
         height: 49vh;
-        margin: 0
+        margin: 0 auto;
     }
 
     .footer__container {
