--- a/public/mobile.css
+++ b/public/mobile.css
@@ -122,8 +122,8 @@
     }
 
     .main__content-img-maths-counter {
-        color:rgb(142, 230, 255);
-        bottom:-37%; 
+        color:rgb(59, 255, 209);
+        bottom:0px; 
 
     }
 
